fix selected and partsofspeech align

--- a/src/content/views/Card.css
+++ b/src/content/views/Card.css
@@ -208,6 +208,7 @@
   display: flex;
   flex-direction: row;
   gap: 5px;
+  align-items: flex-end;
 }
 
 .card-title {
